--- a/example2/index.html
+++ b/example2/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./main.css">
   </head>
   <body>
-    <div>안녕하세요!</div>
+    <div class="box">
+      안녕하세요!
+    </div>
   </body>
 </html>
