add more image example

--- a/example_img/index.html
+++ b/example_img/index.html
@@ -7,5 +7,12 @@
   </head>
   <body>
     <img src="./images/HTML5_oval_logo.png" alt="html 이미지"/>
+    <p>테스트 이미지 입니다!</p>
+    <figure>
+      <img src="./images/HTML5_oval_logo.png" alt="html 이미지"/>
+      <figcaption>
+        테스트 이미지 입니다!
+      </figcaption>
+    </figure>
   </body>
 </html>
