--- a/example_table/index.html
+++ b/example_table/index.html
@@ -8,8 +8,11 @@
   <body>
     <table>
       <tr>
-        <th>타입</th>
-        <th>값</th>
+        <th colspan="2" id="th-data">데이터</th>
+      </tr>
+      <tr>
+        <th abbr="Type" scope="col" headers="th-data">타입</th>
+        <th abbr="Value" scope="col" headers="th-data">값</th>
       </tr>
       <tr>
         <td>알파벳</td>
@@ -18,6 +21,19 @@
       <tr>
         <td>숫자</td>
         <td>1</td>
+      </tr>
+    </table>
+    <table>
+      <tr>
+        <th rowspan="2" id="horizontal-th-data">데이터</th>
+        <th headers="horizontal-th-data">타입</th>
+        <td>알파벳</td>
+        <td>숫자</td>
+      </tr>
+      <tr>
+        <th headers="horizontal-th-data">값</th>
+        <td>A</td>
+        <td>7</td>
       </tr>
     </table>
   </body>
