--- a/example_table/index.html
+++ b/example_table/index.html
@@ -26,14 +26,14 @@
     <table>
       <tr>
         <th rowspan="2" id="horizontal-th-data">데이터</th>
-        <th headers="horizontal-th-data">타입</th>
-        <td>알파벳</td>
-        <td>숫자</td>
+        <th headers="horizontal-th-data" id="th-type">타입</th>
+        <td headers="th-type">알파벳</td>
+        <td headers="th-type">숫자</td>
       </tr>
       <tr>
-        <th headers="horizontal-th-data">값</th>
-        <td>A</td>
-        <td>7</td>
+        <th headers="horizontal-th-data" id="th-value">값</th>
+        <td headers="th-value">A</td>
+        <td headers="th-value">7</td>
       </tr>
     </table>
   </body>
