add caption example?

--- a/example_table/index.html
+++ b/example_table/index.html
@@ -24,6 +24,7 @@
       </tr>
     </table>
     <table>
+      <caption>가로 테이블</caption>
       <tr>
         <th rowspan="2" id="horizontal-th-data">데이터</th>
         <th headers="horizontal-th-data" id="th-type">타입</th>
