add col, colgroup example

--- a/example_table/index.html
+++ b/example_table/index.html
@@ -37,5 +37,28 @@
         <td headers="th-value">7</td>
       </tr>
     </table>
+    
+    <table>
+      <caption>데이터 타입과 값</caption>
+      <colgroup>
+        <col>
+        <col style="background-color: tomato;" span="2">
+      </colgroup>
+      <tr>
+        <th></th>
+        <th>타입</th>
+        <th>값</th>
+      </tr>
+      <tr>
+        <th>1</th>
+        <td>알파벳</td>
+        <td>A</td>
+      </tr>
+      <tr>
+        <th>2</th>
+        <td>숫자</td>
+        <td>7</td>
+      </tr>
+    </table>
   </body>
 </html>
