add fieldset, legend example

--- a/example_input/index.html
+++ b/example_input/index.html
@@ -45,5 +45,20 @@
         }
       </script>
     </div>
+    <fieldset name="coffee-size" disabled>
+      <legend>Coffee Size</legend>
+      <label>
+        <input type="radio" name="size" value="tall" checked/>
+        Tall
+      </label>
+      <label>
+        <input type="radio" name="size" value="grande" />
+        Grande
+      </label>
+      <label>
+        <input type="radio" name="size" value="venti" />
+        Venti
+      </label>
+    </fieldset>
   </body>
 </html>
