add progress and script

--- a/example_input/index.html
+++ b/example_input/index.html
@@ -48,7 +48,7 @@
     <fieldset name="coffee-size" disabled>
       <legend>Coffee Size</legend>
       <label>
-        <input type="radio" name="size" value="tall" checked/>
+        <input type="radio" name="size" value="tall" checked />
         Tall
       </label>
       <label>
@@ -75,13 +75,27 @@
           <option>Coldbrew</option>
         </optgroup>
       </select>
-      <input type="text" list="fruits">
+      <input type="text" list="fruits" />
       <datalist id="fruits">
         <option>Apple</option>
-          <option>Orange</option>
-          <option>Banana</option>
-          <option>Mango</option>
+        <option>Orange</option>
+        <option>Banana</option>
+        <option>Mango</option>
       </datalist>
+    </div>
+    <div>
+      <progress value="70" max="100">70%</progress>
+    </div>
+    <div>
+      <progress value="0" max="100" id="progress-example"></progress>
+      <script>
+        const progress = document.getElementById('progress-example');
+        console.log(progress)
+        const interval = setInterval(() => {
+          progress.value += 10;
+          if (progress.value >= 100) clearInterval(interval);
+        }, 1000)
+      </script>
     </div>
   </body>
 </html>
