add pseudo class selector

--- a/css/example_pseudo/index.html
+++ b/css/example_pseudo/index.html
@@ -10,5 +10,45 @@
     <div class="box"></div>
     <div class="box2"></div>
     <input type="text" />
+
+    <ul class="fruits">
+      <li>딸기</li>
+      <li>오렌지</li>
+      <li>사과</li>
+      <li>망고</li>
+    </ul>
+    
+    <div class="box-group">
+      <div>1</div>
+      <div>2</div>
+      <div>
+        3
+        <div>3-1</div>
+        <div>3-2</div>
+        <div>3-3</div>
+      </div>
+    </div>
+
+    <div class="fruits2">
+      <div>딸기</div>
+      <p>사과</p>
+      <p>망고</p>
+      <span>오렌지</span>
+    </div>
+
+    <ul class="fruits3">
+      <li>딸기</li>
+      <li class="red">오렌지</li>
+      <li>사과</li>
+      <li class="red">망고</li>
+    </ul>
+
+    <ul class="fruits4">
+      <li class="strawberry">딸기</li>
+      <li>오렌지</li>
+      <li>사과</li>
+      <li>망고</li>
+    </ul>
+
   </body>
 </html>
