--- a/css/pseudo_element/index.html
+++ b/css/pseudo_element/index.html
@@ -6,6 +6,26 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
+    <h3>before</h3>
+    <ul class="before">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+    </ul>
+    <h3>after</h3>
+    <ul class="after">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+    </ul>
 
   </body>
 </html>
