--- a/css/attribute_box/index.html
+++ b/css/attribute_box/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <div class="parent">
-      <div class="child">
-        
-      </div>
+      <div class="child"></div>
+    </div>
+    <div class="margin-box-parent">
+      <div class="margin-box-child"></div>
     </div>
   </body>
 </html>
