add padding example

--- a/css/attribute_box/index.html
+++ b/css/attribute_box/index.html
@@ -12,5 +12,14 @@
     <div class="margin-box-parent">
       <div class="margin-box-child"></div>
     </div>
+    <div class="padding-box">
+      Hello World!
+    </div>
+    <div class="calculate-padding-box">
+      Hello World!
+    </div>
+    <div class="auto-calculate-box">
+      Hello World!
+    </div>
   </body>
 </html>
