add float-display example

--- a/css/float/index.html
+++ b/css/float/index.html
@@ -36,5 +36,8 @@
       <div class="float-box">4</div>
     </div>
     <div class="new-box"></div>
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
   </body>
 </html>
