--- a/css/flex/index.html
+++ b/css/flex/index.html
@@ -11,5 +11,34 @@
       <div class="item">2</div>
       <div class="item">3</div>
     </div>
+    <div class="container">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+    </div>
+    <div class="container">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+    </div>
+
+    <div class="container2">
+      <div class="item2">A</div>
+      <div class="item2">B</div>
+      <div class="item2">C</div>
+      <div class="item2">D</div>
+      <div class="item2">E</div>
+    </div>
+    <div class="container3">
+      <div class="item3">A</div>
+      <div class="item3">B</div>
+      <div class="item3">C</div>
+      <div class="item3">D</div>
+      <div class="item3">E</div>
+      <div class="item3">F</div>
+      <div class="item3">G</div>
+      <div class="item3">H</div>
+      <div class="item3">I</div>
+    </div>
   </body>
 </html>
