add flex container examples

--- a/css/flex/index.html
+++ b/css/flex/index.html
@@ -40,5 +40,18 @@
       <div class="item3">H</div>
       <div class="item3">I</div>
     </div>
+    <div class="container4">
+      <div class="item4">A</div>
+      <div class="item4">B</div>
+      <div class="item4">C</div>
+      <div class="item4">D</div>
+      <div class="item4">E</div>
+      <div class="item4">F</div>
+      <div class="item4">G</div>
+      <div class="item4">H</div>
+      <div class="item4">I</div>
+    </div>
+
+    
   </body>
 </html>
