add flex-basis example

--- a/css/flex-items/index.html
+++ b/css/flex-items/index.html
@@ -19,6 +19,10 @@
       <div class="item item12">B</div>
       <div class="item item13">C</div>
     </div>
-    
+    <div class="basis-container">
+      <div class="basis-item item21">Good Job!</div>
+      <div class="basis-item item22">A</div>
+      <div class="basis-item item23">Hello World!!@@</div>
+    </div>
   </body>
 </html>
