--- a/css/flex-items/index.html
+++ b/css/flex-items/index.html
@@ -13,6 +13,10 @@
       <div class="item item4">4</div>
       <div class="item item5">5</div>
       <div class="item item6">6</div>
+      <div class="item item7">7</div>
+      <div class="item item8">8</div>
+      <div class="item item9">9</div>
+      <div class="item item10">10</div>
     </div>
     <div class="container">
       <div class="item item11">A</div>
