add fit-content func

--- a/css/grid3/index.html
+++ b/css/grid3/index.html
@@ -12,5 +12,11 @@
       <aside>ASIDE</aside>
       <footer>FOOTER</footer>
     </div>
+    <div class="container2">
+      <div class="item">1234</div>
+      <div class="item">300px 넘어가는 글자를 만들자.300px 넘어가는 글자를 만들자.300px 넘어가는 글자를 만들자.</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+    </div>
   </body>
 </html>
